--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
@@ -52,7 +53,7 @@
             "dont-discover": []
         }
     },
-    "config": {
+    "config": { 
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
